syntax = "proto2";

package ssd.protos;

import "ssd/protos/image.proto";

message Train {
    required string log_dir = 1;
    required string ckpt_dir = 2;
    required int32 batch_size = 3 [default=8];
    required int32 num_epochs = 4 [default=40];
    required ImageConfig image = 5;
    required float weight_decay = 6 [default=0.00004];
}